# enterprise-ai-agent-platform

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: __init__.py
backend/agents/: __init__.py  finance_agent.py  healthcare_agent.py  legal_agent.py  orchestrator.py
backend/api/: __init__.py  main.py
backend/core/: __init__.py  base_agent.py  cohere_client.py  config.py
backend/evaluation/: __init__.py  datasets.py  evaluator.py  metrics.py  run_eval.py
backend/tests/: __init__.py  test_agents.py  test_evaluation.py
docs/: index.html
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AgentCard.tsx  ChatInterface.tsx  ParticleBackground.tsx  Sidebar.tsx
